# automatic-image-program

./: CMakeLists.txt  README.md
src/: file_manager.cpp  file_manager.hpp  image_processing.cpp  image_processing.hpp  imgui_interface.cpp  imgui_interface.hpp  layer_manager.hpp  main.cpp  undo_redo_manager.hpp  vulkan_render.cpp  vulkan_render.hpp
